--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.3",
     "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^17.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
