--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+     "migration:generate": "typeorm-ts-node-commonjs migration:generate src/migrations/$name -d data-source.ts",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d data-source.ts",
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d data-source.ts",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create src/migrations/$npm_config_name"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/lib-storage": "^3.907.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^4.0.2",
