--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-storage": "^3.907.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^9.0.0",
